force-app/main/default/objects/Author__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(
   NOT(ISBLANK( Date_Of_Birth__c )) &amp;&amp; NOT(ISBLANK( Date_Of_Death__c)),
    FLOOR(( ( Date_Of_Death__c - Date_Of_Birth__c ) / 365 )),
   IF(
       NOT(ISBLANK( Date_Of_Birth__c)),
       FLOOR(( ( TODAY() - Date_Of_Birth__c) / 365 )),
       null
     )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>