force-app/main/default/objects/Author__c/fields/Is_Author_Dead__c.field-meta.xml
<CustomField>
    <fullName>Is_Author_Dead__c</fullName>
    <formula>IF( ISBLANK( TEXT( Date_Of_Death__c ) ), false, true )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Author Dead</label>
    <type>Checkbox</type>
</CustomField>