force-app/main/default/objects/Author__c/fields/Number_Of_Published_Books__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Published_Books__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Published Books</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>