force-app/main/default/objects/Author__c/fields/Unique_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_User_Id__c</fullName>
    <description>Hidden field that holds the value for User Id.</description>
    <label>Unique User Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>