force-app/main/default/objects/Author__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>One to One relationship between author and user.</description>
    <label>UserId</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Id</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Authors</relationshipName>
    <type>Lookup</type>
</CustomField>